// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`barChart > renders correctly with data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div>
        <div
          style="position: relative;"
        >
          <svg
            focusable="false"
            height="500"
            role="img"
            width="1000"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="transparent"
              height="500"
              width="1000"
            />
            <g
              transform="translate(60,50)"
            >
              <g>
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="400"
                  y2="400"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="342.8571428571429"
                  y2="342.8571428571429"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="285.7142857142857"
                  y2="285.7142857142857"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="228.57142857142856"
                  y2="228.57142857142856"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="171.42857142857144"
                  y2="171.42857142857144"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="114.28571428571428"
                  y2="114.28571428571428"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="57.14285714285716"
                  y2="57.14285714285716"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="0"
                  y2="0"
                />
              </g>
              <g
                transform="translate(0,400)"
              >
                <g
                  style="opacity: 1;"
                  transform="translate(122.7439024390244,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-01T11:00:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(345.9146341463415,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-08T11:01:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(569.0853658536586,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-15T11:02:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(792.2560975609756,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-25T11:12:00Z
                  </text>
                </g>
                <line
                  style="stroke: transparent; stroke-width: 1;"
                  x1="0"
                  x2="915"
                  y1="0"
                  y2="0"
                />
              </g>
              <g
                transform="translate(0,0)"
              >
                <g
                  style="opacity: 1;"
                  transform="translate(0,400)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,342.8571428571429)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    5
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,285.7142857142857)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    10
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,228.57142857142856)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    15
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,171.42857142857144)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    20
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,114.28571428571428)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    25
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,57.14285714285716)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    30
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    35
                  </text>
                </g>
                <line
                  style="stroke: transparent; stroke-width: 1;"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="400"
                />
              </g>
              <g
                transform="translate(22.317073170731703, 285.7142857142857)"
              >
                <rect
                  data-testid="bar.item.value.0"
                  fill="#5e47be"
                  focusable="false"
                  height="114.28571428571428"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(245.4878048780488, 171.42857142857144)"
              >
                <rect
                  data-testid="bar.item.value.1"
                  fill="#5e47be"
                  focusable="false"
                  height="228.57142857142856"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(468.6585365853659, 11.428571428571432)"
              >
                <rect
                  data-testid="bar.item.value.2"
                  fill="#5e47be"
                  focusable="false"
                  height="388.57142857142856"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(691.8292682926829, 240)"
              >
                <rect
                  data-testid="bar.item.value.3"
                  fill="#5e47be"
                  focusable="false"
                  height="160"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barChart > renders correctly with data transformer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div>
        <div
          style="position: relative;"
        >
          <svg
            focusable="false"
            height="500"
            role="img"
            width="1000"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="transparent"
              height="500"
              width="1000"
            />
            <g
              transform="translate(60,50)"
            >
              <g>
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="400"
                  y2="400"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="342.8571428571429"
                  y2="342.8571428571429"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="285.7142857142857"
                  y2="285.7142857142857"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="228.57142857142856"
                  y2="228.57142857142856"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="171.42857142857144"
                  y2="171.42857142857144"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="114.28571428571428"
                  y2="114.28571428571428"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="57.14285714285716"
                  y2="57.14285714285716"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="0"
                  y2="0"
                />
              </g>
              <g
                transform="translate(0,400)"
              >
                <g
                  style="opacity: 1;"
                  transform="translate(122.7439024390244,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-01T11:00:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(345.9146341463415,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-08T11:01:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(569.0853658536586,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-15T11:02:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(792.2560975609756,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-25T11:12:00Z
                  </text>
                </g>
                <line
                  style="stroke: transparent; stroke-width: 1;"
                  x1="0"
                  x2="915"
                  y1="0"
                  y2="0"
                />
              </g>
              <g
                transform="translate(0,0)"
              >
                <g
                  style="opacity: 1;"
                  transform="translate(0,400)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,342.8571428571429)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    5
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,285.7142857142857)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    10
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,228.57142857142856)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    15
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,171.42857142857144)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    20
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,114.28571428571428)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    25
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,57.14285714285716)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    30
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    35
                  </text>
                </g>
                <line
                  style="stroke: transparent; stroke-width: 1;"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="400"
                />
              </g>
              <g
                transform="translate(22.317073170731703, 285.7142857142857)"
              >
                <rect
                  data-testid="bar.item.value.0"
                  fill="#5e47be"
                  focusable="false"
                  height="114.28571428571428"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(245.4878048780488, 171.42857142857144)"
              >
                <rect
                  data-testid="bar.item.value.1"
                  fill="#5e47be"
                  focusable="false"
                  height="228.57142857142856"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(468.6585365853659, 11.428571428571432)"
              >
                <rect
                  data-testid="bar.item.value.2"
                  fill="#5e47be"
                  focusable="false"
                  height="388.57142857142856"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(691.8292682926829, 240)"
              >
                <rect
                  data-testid="bar.item.value.3"
                  fill="#5e47be"
                  focusable="false"
                  height="160"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barChart > renders correctly with multiple series 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div>
        <div
          style="position: relative;"
        >
          <svg
            focusable="false"
            height="500"
            role="img"
            width="1000"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="transparent"
              height="500"
              width="1000"
            />
            <g
              transform="translate(60,50)"
            >
              <g>
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="200"
                  y2="200"
                />
              </g>
              <g
                transform="translate(0,400)"
              >
                <g
                  style="opacity: 1;"
                  transform="translate(62.12962962962964,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-01T11:00:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(175.0925925925926,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-02T11:01:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(288.05555555555554,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-03T11:02:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(401.01851851851853,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-04T11:03:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(513.9814814814815,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-05T11:04:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(626.9444444444445,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-06T11:05:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(739.9074074074075,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-07T11:06:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(852.8703703703704,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-08T11:07:00Z
                  </text>
                </g>
                <line
                  style="stroke: transparent; stroke-width: 1;"
                  x1="0"
                  x2="915"
                  y1="0"
                  y2="0"
                />
              </g>
              <g
                transform="translate(0,0)"
              >
                <g
                  style="opacity: 1;"
                  transform="translate(0,200)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0
                  </text>
                </g>
                <line
                  style="stroke: transparent; stroke-width: 1;"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="400"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barChart > renders correctly with negative values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div>
        <div
          style="position: relative;"
        >
          <svg
            focusable="false"
            height="500"
            role="img"
            width="1000"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="transparent"
              height="500"
              width="1000"
            />
            <g
              transform="translate(60,50)"
            >
              <g>
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="400"
                  y2="400"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="360"
                  y2="360"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="320"
                  y2="320"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="280"
                  y2="280"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="240"
                  y2="240"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="200"
                  y2="200"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="160"
                  y2="160"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="120.00000000000001"
                  y2="120.00000000000001"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="79.99999999999999"
                  y2="79.99999999999999"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="39.99999999999999"
                  y2="39.99999999999999"
                />
                <line
                  opacity="1"
                  stroke="#dddddd"
                  stroke-width="1"
                  x1="0"
                  x2="915"
                  y1="0"
                  y2="0"
                />
              </g>
              <g
                transform="translate(0,400)"
              >
                <g
                  style="opacity: 1;"
                  transform="translate(62.12962962962964,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-01T11:00:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(175.0925925925926,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-02T11:01:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(288.05555555555554,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-03T11:02:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(401.01851851851853,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-04T11:03:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(513.9814814814815,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-05T11:04:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(626.9444444444445,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-06T11:05:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(739.9074074074075,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-07T11:06:00Z
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(852.8703703703704,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="0"
                    y1="0"
                    y2="5"
                  />
                  <text
                    dominant-baseline="text-before-edge"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="middle"
                    transform="translate(0,10) rotate(0)"
                  >
                    2019-07-08T11:07:00Z
                  </text>
                </g>
                <line
                  style="stroke: transparent; stroke-width: 1;"
                  x1="0"
                  x2="915"
                  y1="0"
                  y2="0"
                />
              </g>
              <g
                transform="translate(0,0)"
              >
                <g
                  style="opacity: 1;"
                  transform="translate(0,400)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,360)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0.1
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,320)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0.2
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,280)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0.3
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,240)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0.4
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,200)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0.5
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,160)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0.6
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,120.00000000000001)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0.7
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,79.99999999999999)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0.8
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,39.99999999999999)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    0.9
                  </text>
                </g>
                <g
                  style="opacity: 1;"
                  transform="translate(0,0)"
                >
                  <line
                    style="stroke: rgb(233, 234, 235); stroke-width: 1;"
                    x1="0"
                    x2="-5"
                    y1="0"
                    y2="0"
                  />
                  <text
                    dominant-baseline="central"
                    style="font-family: Inter, sans-serif; font-size: 0.875rem; fill: rgb(63, 66, 80); dominant-baseline: middle; letter-spacing: 0px; line-height: 1.25rem;"
                    text-anchor="end"
                    transform="translate(-10,0) rotate(0)"
                  >
                    1
                  </text>
                </g>
                <line
                  style="stroke: transparent; stroke-width: 1;"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="400"
                />
              </g>
              <g
                transform="translate(11.296296296296305, 0)"
              >
                <rect
                  data-testid="bar.item.value.0"
                  fill="#5e47be"
                  focusable="false"
                  height="400"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(124.25925925925927, 400)"
              >
                <rect
                  data-testid="bar.item.value.1"
                  fill="#5e47be"
                  focusable="false"
                  height="400"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(237.22222222222223, 400)"
              >
                <rect
                  data-testid="bar.item.value.2"
                  fill="#5e47be"
                  focusable="false"
                  height="400"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(350.1851851851852, 0)"
              >
                <rect
                  data-testid="bar.item.value.3"
                  fill="#5e47be"
                  focusable="false"
                  height="400"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(463.14814814814815, 400)"
              >
                <rect
                  data-testid="bar.item.value.4"
                  fill="#5e47be"
                  focusable="false"
                  height="400"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(576.1111111111111, 400)"
              >
                <rect
                  data-testid="bar.item.value.5"
                  fill="#5e47be"
                  focusable="false"
                  height="400"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(689.0740740740741, 0)"
              >
                <rect
                  data-testid="bar.item.value.6"
                  fill="#5e47be"
                  focusable="false"
                  height="400"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
              <g
                transform="translate(802.0370370370371, 400)"
              >
                <rect
                  data-testid="bar.item.value.7"
                  fill="#5e47be"
                  focusable="false"
                  height="400"
                  rx="0"
                  ry="0"
                  stroke="#5e47be"
                  stroke-width="0"
                  width="0"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barChart > renders correctly without data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div>
        <div
          style="position: relative;"
        >
          <svg
            focusable="false"
            height="500"
            role="img"
            width="1000"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="transparent"
              height="500"
              width="1000"
            />
            <g
              transform="translate(60,50)"
            >
              <g />
              <g
                transform="translate(0,400)"
              >
                <line
                  style="stroke: transparent; stroke-width: 1;"
                  x1="0"
                  x2="915"
                  y1="0"
                  y2="0"
                />
              </g>
              <g
                transform="translate(0,0)"
              >
                <line
                  style="stroke: transparent; stroke-width: 1;"
                  x1="0"
                  x2="0"
                  y1="0"
                  y2="400"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
